--- a/public/common/style.css
+++ b/public/common/style.css
@@ -226,7 +226,7 @@ table {
   }
 
   tr:nth-child(even) {
-    background-color: #dddddd;
+    background-color: #747474;
   }
 
   /* end table responsive */
